--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "hanime-api",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "src/app.js",
   "scripts": {
     "test": "node ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Lishan778/hanime-api"
   },
   "keywords": [
     "hanime",
@@ -17,7 +13,8 @@
   "author": "shaan",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "fake-useragent": "^1.0.1"
