--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "fake-useragent": "^1.0.1"
   }
 }
